[gd_scene load_steps=2 format=2]

[ext_resource path="res://AudioGUI.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="TabWindow" type="TabContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playback" type="MarginContainer" parent="CanvasLayer/TabWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="Split" type="HSplitContainer" parent="CanvasLayer/TabWindow/Playback"]
margin_left = 50.0
margin_top = 50.0
margin_right = 766.0
margin_bottom = 314.0
custom_constants/separation = 20
dragger_visibility = 1

[node name="Playback" type="VBoxContainer" parent="CanvasLayer/TabWindow/Playback/Split"]
margin_right = 348.0
margin_bottom = 264.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="CueDropdown" type="OptionButton" parent="CanvasLayer/TabWindow/Playback/Split/Playback"]
margin_right = 348.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CuePlayerController" type="HBoxContainer" parent="CanvasLayer/TabWindow/Playback/Split/Playback"]
margin_top = 30.0
margin_right = 348.0
margin_bottom = 54.0
custom_constants/separation = 10

[node name="PlayButton" type="Button" parent="CanvasLayer/TabWindow/Playback/Split/Playback/CuePlayerController"]
margin_right = 109.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopButton" type="Button" parent="CanvasLayer/TabWindow/Playback/Split/Playback/CuePlayerController"]
margin_left = 119.0
margin_right = 228.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="CheckBox" parent="CanvasLayer/TabWindow/Playback/Split/Playback/CuePlayerController"]
margin_left = 238.0
margin_right = 348.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Pause"

[node name="PlayStatus" type="Label" parent="CanvasLayer/TabWindow/Playback/Split/Playback"]
margin_top = 64.0
margin_right = 348.0
margin_bottom = 78.0

[node name="Parameters" type="VBoxContainer" parent="CanvasLayer/TabWindow/Playback/Split"]
margin_left = 368.0
margin_right = 716.0
margin_bottom = 264.0
size_flags_horizontal = 3

[node name="VolumeLabel" type="Label" parent="CanvasLayer/TabWindow/Playback/Split/Parameters"]
margin_right = 348.0
margin_bottom = 14.0
text = "Volume"
align = 1

[node name="VolumeSlider" type="HSlider" parent="CanvasLayer/TabWindow/Playback/Split/Parameters"]
margin_top = 18.0
margin_right = 348.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="PitchLabel" type="Label" parent="CanvasLayer/TabWindow/Playback/Split/Parameters"]
margin_top = 38.0
margin_right = 348.0
margin_bottom = 52.0
text = "Pitch"
align = 1

[node name="PitchSlider" type="HSlider" parent="CanvasLayer/TabWindow/Playback/Split/Parameters"]
margin_top = 56.0
margin_right = 348.0
margin_bottom = 72.0
min_value = -1200.0
max_value = 1200.0

[node name="PanLabel" type="Label" parent="CanvasLayer/TabWindow/Playback/Split/Parameters"]
margin_top = 76.0
margin_right = 348.0
margin_bottom = 90.0
text = "Pan"
align = 1

[node name="PanSlider" type="HSlider" parent="CanvasLayer/TabWindow/Playback/Split/Parameters"]
margin_top = 94.0
margin_right = 348.0
margin_bottom = 110.0
min_value = -30.0
max_value = 30.0

[connection signal="button_down" from="CanvasLayer/TabWindow/Playback/Split/Playback/CuePlayerController/PlayButton" to="CanvasLayer" method="_on_play_button_down"]
[connection signal="button_down" from="CanvasLayer/TabWindow/Playback/Split/Playback/CuePlayerController/StopButton" to="CanvasLayer" method="_on_stop_button_down"]
[connection signal="toggled" from="CanvasLayer/TabWindow/Playback/Split/Playback/CuePlayerController/PauseButton" to="CanvasLayer" method="_on_pause_toggled"]
[connection signal="value_changed" from="CanvasLayer/TabWindow/Playback/Split/Parameters/VolumeSlider" to="CanvasLayer" method="_on_volume_changed"]
[connection signal="value_changed" from="CanvasLayer/TabWindow/Playback/Split/Parameters/PitchSlider" to="CanvasLayer" method="_on_pitch_changed"]
[connection signal="value_changed" from="CanvasLayer/TabWindow/Playback/Split/Parameters/PanSlider" to="CanvasLayer" method="_on_pan_changed"]
